[package]
name = "tracpost"
version = "0.1.0"
authors = ["Wataru Ashihara <wataash@wataash.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "*"
failure = "0.1.8"
reqwest = "0.9.24"
serde = "1.0.111"
serde_json = "1.0.53"

[dev-dependencies]
textwrap = "0.11.0"
